[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scripts/Tee.gd" type="Script" id=1]
[ext_resource path="res://src/tres/DejaVuSans.tres" type="FontFile" id=2]
[ext_resource path="res://src/tres/HookMaterial.tres" type="Material" id=3]

[sub_resource type="SphereShape3D" id=3]

[sub_resource type="SphereMesh" id=4]

[sub_resource type="CylinderMesh" id=5]

[sub_resource type="StandardMaterial3D" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxMesh" id=7]

[node name="Node3D" type="Node3D" groups=["tees"]]
script = ExtResource( 1 )

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource( 3 )

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
visible = false
mesh = SubResource( 4 )
skeleton = NodePath("../CollisionShape3D")

[node name="Head" type="Node3D" parent="CharacterBody3D"]

[node name="EyeL" type="MeshInstance3D" parent="CharacterBody3D/Head"]
transform = Transform3D( 0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.3, -1.31134e-08, 0.5, 0.5, 0.7 )
visible = false
mesh = SubResource( 5 )
skeleton = NodePath("../../..")
material/0 = SubResource( 6 )

[node name="EyeR" type="MeshInstance3D" parent="CharacterBody3D/Head"]
transform = Transform3D( 0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.3, -1.31134e-08, -0.5, 0.5, 0.7 )
visible = false
mesh = SubResource( 5 )
skeleton = NodePath("../../..")
material/0 = SubResource( 6 )

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/Head"]
transform = Transform3D( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1, 0 )
fov = 130.0
far = 2048.0

[node name="Cursor" type="MeshInstance3D" parent="CharacterBody3D/Head/Camera3D"]
transform = Transform3D( -0.0016, 2.62268e-08, -1.14641e-15, 0, -6.99382e-11, -0.0016, -1.39876e-10, -0.3, 1.31134e-08, 6.1196e-08, 0, -0.7 )
mesh = SubResource( 5 )
skeleton = NodePath("../../../..")
material/0 = SubResource( 6 )

[node name="RayCast3D" type="RayCast3D" parent="CharacterBody3D/Head/Camera3D/Cursor"]
transform = Transform3D( 625, 6.14891e-16, -8.51171e-11, 9.8301e-13, -2.73196e-05, 3.33333, -4.29687e-20, -625, -1.45705e-07, 8.62273e-11, -2.33333, 0 )
enabled = true
target_position = Vector3( 0, 0, 800 )

[node name="HookLine" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D( 0.06, 0, 0, 0, 0.06, 0, 0, 0, 1, 0, 0, 0 )
visible = false
mesh = SubResource( 7 )
material/0 = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 492.0
offset_top = 290.0
offset_right = 532.0
offset_bottom = 309.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
offset_right = 105.0
offset_bottom = 14.0
text = "THIS IS A CLONE"

[node name="DistanceLabel" type="Label" parent="CenterContainer/VBoxContainer"]
offset_right = 40.0
offset_bottom = 19.0
theme_override_fonts/font = ExtResource( 2 )
text = "1000"
align = 1
valign = 1
